# yt-dlp-downloader

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: TrackDownloader.py  genius_lyrics.py  lrc_lyrics.py  main.py  track_downloader.py
